k8s/deployment_v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-v1
  labels:
    app: flask-canary
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-canary
      version: v1
  template:
    metadata:
      labels:
        app: flask-canary
        version: v1
    spec:
      containers:
      - name: flask-app
        image: flask-canary-demo:v1
        ports:
        - containerPort: 5000
