k8s/service_v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-v1-svc
spec:
  selector:
    app: flask-canary
    version: v1
  ports:
  - port: 80
    targetPort: 5000
