k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-main-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: flask-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-v1-svc
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-canary-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"

    # Canary 关键注解
    nginx.ingress.kubernetes.io/canary: "true"
    # 这里设定 canary-weight=20，即 ~20% 流量导向 v2
    nginx.ingress.kubernetes.io/canary-weight: "20"
spec:
  rules:
    - host: flask-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-v2-svc
                port:
                  number: 80
